# Legal

./: .gitignore
Legal_Ai_Research_Agent/: .env.example  .gitignore  README.md  pyproject.toml
Legal_Ai_Research_Agent/src/deep_research_from_scratch/: config.py  legal_think_tool.py  mcp_client.py  memory_backend.py  memory_mcp_tools.py  memory_tools.py  model_config.py  multi_agent_supervisor.py  prompts.py  report_sources.py  report_verification.py  research_agent.py  research_agent_full.py  research_agent_normal.py  research_agent_scope.py  research_bootstrap.py  retrieval_bridge.py  search_tools.py  source_registry.py  state_multi_agent_supervisor.py  state_research.py  state_scope.py  utils.py
Legal_Ai_Research_Agent/tests/: conftest.py  test_config.py  test_graph_wiring.py  test_memory_backend.py  test_memory_mcp_tools.py  test_memory_tools.py  test_model_config.py  test_nodes.py  test_report_sources.py  test_report_verification.py  test_research_bootstrap.py  test_search_tools.py  test_source_registry.py
document_core/: .env.example  .env.production.example  pyproject.toml
document_core/document_core/: config.py
document_core/document_core/db/: migrate.py
document_core/document_core/embeddings/: service.py
document_core/document_core/llm/: ingest_llm.py
document_core/document_core/migrations/: 001_document_corpus.sql  002_policy_registry_status.sql  003_modernbert_embedding_dim.sql  004_policy_categories.sql  007_policy_catalog_vectors.sql
document_core/document_core/parser/: text_parser.py
document_core/document_core/prompts/: policy_profiler.md  policy_section_categories.md
document_core/document_core/schemas/: category_filter.py  category_tag.py  chunk.py  policy_catalog.py  policy_sync.py  registry.py  taxonomy.py
document_core/document_core/search/: reranker.py
document_core/document_core/services/: catalog_search.py  catalog_sync.py  category_tagger.py  document_tag_priors.py  grounding.py  ingest.py  metadata_at_ingest.py  policy_profiler.py  policy_sync.py  quote_match.py  registry.py  search.py
document_core/document_core/store/: async_adapter.py  memory_store.py  pgvector_store.py  protocol.py
document_core/tests/: conftest.py  test_catalog_search.py  test_category_tagger.py  test_document_tag_priors.py  test_grounding.py  test_ingest_llm.py  test_ingest_search.py  test_metadata_at_ingest_aup.py  test_pgvector_save_document.py  test_policy_profiler.py  test_policy_sync.py  test_quote_match.py  test_registry.py  test_taxonomy.py  test_text_parser.py
legal_ai_platform/: .env.example  README.md  pyproject.toml
legal_ai_platform/docs/: PHASE9_POSTGRES_SESSION_MEMORY_PLAN.md
legal_ai_platform/src/legal_ai_platform/: __init__.py  config.py  container.py
legal_ai_platform/tests/: conftest.py  test_classifier.py  test_memory_postgres.py  test_orchestrator.py  test_registry.py  test_research_agent.py  test_retrieval_client.py  test_review_gateway.py  test_search_tools_bridge.py  test_session_postgres.py
review/review_agent/: .env.example  .env.production.example  pyproject.toml
review/review_agent/review_agent/: config.py
review/review_agent/scripts/: print_review_timings.py
review/review_agent/tests/: conftest.py  fixtures.py  test_accuracy_paths_invariants.py  test_baseline_interpretation.py  test_ca1_compare_failure.py  test_catalog_match_recovery.py  test_catalog_matcher.py  test_circuit_breaker.py  test_compare_hit_selection.py  test_compare_prompt_tokens.py  test_compare_prompts.py  test_compliance_batch.py  test_compliance_lexical.py  test_compliance_llm.py  test_compliance_merge.py  test_compliance_prescreen.py  test_config_advisory.py  test_config_rate_limit_profile.py  test_contract_by_id.py  test_contract_routing.py  test_cs1_compare_hit_selection.py  test_document_client.py  test_document_client_categories.py  test_document_client_timeouts.py  test_double_filter_alignment.py  test_ec1_obligation_cap.py  test_engine_diagnosis.py  test_equivalence_guard.py  test_evidence_sufficiency.py  test_failure_policy.py  test_failure_policy_extract.py  test_final_gap_verify.py  test_finding_dedupe.py  test_finding_enrich.py  test_grounding_downgrade.py  test_grounding_fail_open.py  test_guard_pass.py  test_guard_pass_tiered.py  test_incorporation_guard.py  (+59 more)
(+376 files in other folders)
